--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ div.st-emotion-cache-138t0cn.e1f1d6gn2{
     /* div.e1f1d6gn3{
         align-content: end;
     } */
+    div.st-emotion-cache-ms8dc9.e1b2p2ww15{
+        font-family:'Sans-Serif';
+    }
 li.nav-item{
 flex-grow:0;
 white-space: nowrap;
