--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div.dvn-underlay.canvas table tbody tr td:fist-child{
 div.st-emotion-cache-ms8dc9{
     padding:10px;
 }
-div.block-container.st-emotion-cache-z5fcl4 {
+div.block-container.st-emotion-cache-10trblm {
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 50px;
