--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ div.dvn-underlay.canvas table tbody tr td:fist-child{
 div.st-emotion-cache-ms8dc9{
     padding:10px;
 }
-div.block-container.st-emotion-cache-10trblm {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 50px;
+div.block-container.st-emotion-cache-z5fcl4  {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+    padding-top: 50px !important;
 }
 div.st-emotion-cache-138t0cn.e1f1d6gn2{
     gap:5px;
